# opencvplugin

./: CMakeLists.txt  LICENSE  README.md  cvtypes.cpp  cvtypes.h  opencvplugin.cpp  opencvplugin.h  opencvplugin_api.h  pkg-opencvplugin.cmake
Datatypes/: CMakeLists.txt  mattoqimageadaptor.cpp  mattoqimageadaptor.h  qimagetomatadaptor.cpp  qimagetomatadaptor.h
Designer/: CMakeLists.txt  opencvplugindesigner.cpp  opencvplugindesigner.h  opencvplugindesigner_api.h
Operations/: CMakeLists.txt  convert32fmat.cpp  convert32fmat.h  imagereader.cpp  imagereader.h  invertimage.cpp  invertimage.h
Tests/: CMakeLists.txt  test_imagereader.cpp  test_opencv.wsx
Widgets/: CMakeLists.txt  matwidget.cpp  matwidget.h  matwidget.ui  matwidgetconnector.cpp  matwidgetconnector.h  matwidgetfactory.cpp  matwidgetfactory.h
Workflows/: test_opencv.wsx
